--- a/index.html
+++ b/index.html
@@ -33,48 +33,8 @@
     <ul id="expenses"></ul>
 
     <!-- JS for the backend logic -->
-    <script src="backend.js"></script>
-
+    <script src="main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
 </body>
 
 </html>
-
-
-
-<!-- <body class="container">
-    <div id="formOuter" class="container">
-        <form class="form-group" onsubmit="return printAll()" >
-            <h1>Book a call</h1>
-            <h5>Book a call slot and our representative will call you within 1hr of selected time.</h5>
-
-            <hr>
-
-            <Label for="name" class="form-label">Name:</Label><br>
-            <input type="text" id="name" name="name" class="form-control"><br>
-            <Label for="email" class="form-label">Email:</Label><br>
-            <input type="text" id="email" name="email" class="form-control"><br>
-            <Label for="phone" class="form-label">Phone:</Label><br>
-            <input type="text" id="phone" name="phone" pattern="[0-9]{10}" class="form-control"><br>
-            <Label for="date" class="form-label">Time for Call:</Label><br>
-            <div class="input-group">
-                <input type="date" class="dateTime" id = "date" name="date" class="form-date">
-                <input type="time" class="dateTime" id="time" name="time" class="form-control"><br><br>
-            </div>
-
-
-            <input type="submit" name="submit" id="submitButton" value="GET A CALL">
-        </form>
-    </div> -->
-
-    <!-- <ul class="items">
-      <li class="item">item1</li>
-      <li class="item">item2</li>
-      <li class="item">item3</li>
-    </ul> -->
-<!-- 
-    <h1 id="msg"></h1> -->
-
-    <!-- <script src="main.js" rel="javascript"></script> -->
-<!--     
-    
-</body> -->
